--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "font-awesome": "^4.7.0",
