--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@auth0/angular-jwt": "^5.0.2",
     "@kolkov/ngx-gallery": "^1.2.3",
     "@microsoft/signalr": "^5.0.0",
     "bootstrap": "^4.5.3",
